# triton-sentence-transformer-tutorial

./: Dockerfile  LICENSE  README.md  locustfile.py  pyproject.toml
models/v1/multilingual-e5-large/: config.pbtxt
models/v1/multilingual-e5-large/1/: model.py
models/v1/multilingual-e5-large/configs/: cpu.pbtxt
models/v1/multilingual-e5-small-transformers/: config.pbtxt
models/v1/multilingual-e5-small-transformers/1/: model.py
models/v2/multilingual-e5-large/: config.pbtxt
models/v2/multilingual-e5-large-onnx/: config.pbtxt
models/v2/multilingual-e5-large-onnx/configs/: cpu.pbtxt
models/v2/multilingual-e5-large-postprocessing/: config.pbtxt
models/v2/multilingual-e5-large-postprocessing/1/: model.py
models/v2/multilingual-e5-large-preprocessing/: config.pbtxt
models/v2/multilingual-e5-large-preprocessing/1/: model.py
models/v2/multilingual-e5-small-ensemble/: config.pbtxt
models/v2/multilingual-e5-small-onnx/: config.pbtxt
models/v2/multilingual-e5-small-postprocessing/: config.pbtxt
models/v2/multilingual-e5-small-preprocessing/: config.pbtxt
models/v3/multilingual-e5-large/: config.pbtxt
models/v3/multilingual-e5-large-onnx/: config.pbtxt
models/v3/multilingual-e5-large-postprocessing/: config.pbtxt
models/v3/multilingual-e5-large-preprocessing/: config.pbtxt
models/v3/multilingual-e5-small-onnx/: config.pbtxt
models/v3/multilingual-e5-small-postprocessing/: config.pbtxt
models/v3/multilingual-e5-small-preprocessing/: config.pbtxt
scripts/: serialize_data_for_warmup.py
src/: grpc_user.py
(+3 files in other folders)
